--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,8 @@ services:
   caddy:
     image: caddy:2.8.4-alpine
     restart: unless-stopped
-    command: caddy reverse-proxy --from https://192.168.1.172:443 --to http://frontend:8000
+    volumes:
+      - $PWD/caddy/Caddyfile:/etc/caddy/Caddyfile
     ports:
       - "80:80"
       - "443:443"
