--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,13 @@ services:
     build: frontend
     expose:
       - "8000:8000"
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      POSTGRES_PASSWORD: /run/secrets/postgres_password
+    secrets:
+      - postgres_password
   caddy:
     image: caddy:2.8.4-alpine
     restart: unless-stopped
@@ -11,3 +18,22 @@ services:
     ports:
       - "80:80"
       - "443:443"
+  db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: /run/secrets/postgres_password
+    secrets:
+      - postgres_password
+    volumes:
+      - pgdata:/var/lib/postgresql/data 
+    ports:
+      - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 1s
+      timeout: 5s
+      retries: 10
+secrets:
+  postgres_password:
+    file: $PWD/secrets/postgress_pass.txt
