--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -2,6 +2,9 @@
 
 cantseewater.online {
 	reverse_proxy frontend:8000
-	reverse_proxy /api backend:8080
+}
+
+api.cantseewater.online {
+	reverse_proxy backend:8080
 }
 
