--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,7 @@
 FROM node:23-alpine
 WORKDIR /app
 
-COPY public/ /react-docker-example/public
-COPY src/ /react-docker-example/src
-COPY package.json /react-docker-example/
+COPY . .
 
 RUN npm install
 
