--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "PORT=8000 react-scripts start",
-    "build": "react-scripts build",
+    "build": "PORT=8000 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
