--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,27 @@
-version: '3'
-
 services:
+  db:
+    build: db 
+    user: postgres
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_PASSWORD=/run/secrets/postgres_db_password
+      - POSTGRES_USER=/run/secrets/postgres_db_user
+      - POSTGRES_DB=/run/secrets/postgres_db
+    volumes: 
+      - db:/var/lib/postgresql/data
   backend:
     build: backend 
-    expose:
+    ports:
       - "8080:8080"
+    environment:
+      - POSTGRES_PASSWORD=/run/secrets/postgres_db_password
+      - POSTGRES_USER=/run/secrets/postgres_db_user
+      - PGUSER=/run/secrets/postgres_db_user
+      - POSTGRES_DB=/run/secrets/postgres_db
   frontend:
     build: frontend
-    expose:
+    ports:
       - "8000:8000"
     links:
       - backend
@@ -19,3 +33,13 @@ services:
     ports:
       - "80:80"
       - "443:443"
+secrets:
+  postgres_db:
+    file: secrets/postgres_db.txt
+  postgres_db_user:
+    file: secrets/postgres_db_user.txt
+  postgres_db_password:
+    file: secrets/postgres_pass.txt
+volumes:
+  db:
+    driver: local
