--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,18 @@
 services:
+  rabbitmq:
+    image: rabbitmq:4-management-alpine
+    container_name: 'rabbitmq'
+    ports:
+        - 5672:5672
+        - 15672:15672
+    healthcheck:
+      test: [ "CMD", "nc", "-z", "localhost", "5672" ]
+      interval: 2s
+      timeout: 10s
+      retries: 5
+    volumes:
+        - rabbit_lib:/var/lib/rabbitmq/
+        - rabbit_log:/var/log/rabbitmq
   db:
     build: db 
     user: postgres
@@ -21,7 +35,8 @@ services:
       - POSTGRES_DB=/run/secrets/postgres_db
       - MODE=$MODE
     depends_on:
-      - db
+      rabbitmq:
+        condition: service_healthy
   frontend:
     build: 
       context: frontend
@@ -52,3 +67,5 @@ volumes:
   db_volume:
   caddy_data:
   caddy_config:
+  rabbit_lib:
+  rabbit_log:
