wip, rabbit might be better

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,41 +1,47 @@
 services:
-  rabbitmq:
-    image: rabbitmq:4-management-alpine
-    container_name: 'rabbitmq'
+  zookeeper:
+    image: zookeeper
     ports:
-        - 5672:5672
-        - 15672:15672
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_SERVERS: zookeeper:2888:3888
+  kafka:
+    image: apache/kafka:latest
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+      - "9999:9999"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,DOCKER://host.docker.internal:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_BROKER_ID: 1
+      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_JMX_PORT: 9999
+      KAFKA_JMX_HOSTNAME: ${DOCKER_HOST_IP:-127.0.0.1}
+      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
+      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: "true"
+    depends_on:
+      - zookeeper
     healthcheck:
-      test: [ "CMD", "nc", "-z", "localhost", "5672" ]
+      test: /kafka/bin/kafka-cluster.sh cluster-id --bootstrap-server kafka:9092 || exit 1
       interval: 2s
       timeout: 10s
       retries: 5
-    volumes:
-        - rabbit_lib:/var/lib/rabbitmq/
-        - rabbit_log:/var/log/rabbitmq
-  db:
-    build: db 
-    user: postgres
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_PASSWORD=/run/secrets/postgres_db_password
-      - POSTGRES_USER=/run/secrets/postgres_db_user
-      - POSTGRES_DB=/run/secrets/postgres_db
-    volumes: 
-      - db_volume:/var/lib/postgresql/data
   backend:
     build: backend 
     ports:
       - "8080:8080"
     environment:
-      - POSTGRES_PASSWORD=/run/secrets/postgres_db_password
-      - POSTGRES_USER=/run/secrets/postgres_db_user
-      - PGUSER=/run/secrets/postgres_db_user
-      - POSTGRES_DB=/run/secrets/postgres_db
       - MODE=$MODE
     depends_on:
-      rabbitmq:
+      kafka:
         condition: service_healthy
   frontend:
     build: 
@@ -56,16 +62,6 @@ services:
       - $PWD/caddy/Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
-secrets:
-  postgres_db:
-    file: secrets/postgres_db.txt
-  postgres_db_user:
-    file: secrets/postgres_db_user.txt
-  postgres_db_password:
-    file: secrets/postgres_pass.txt
 volumes:
-  db_volume:
   caddy_data:
   caddy_config:
-  rabbit_lib:
-  rabbit_log:
