--- a/compose_test.yaml
+++ b/compose_test.yaml
@@ -1,24 +1,32 @@
 services:
-  rabbitmq:
-    image: rabbitmq:4-alpine
-    container_name: 'rabbitmq'
+  zookeeper:
+    image: zookeeper
     ports:
-        - 5672:5672
-        - 15672:15672
-    healthcheck:
-      test: [ "CMD", "nc", "-z", "localhost", "5672" ]
-      interval: 2s
-      timeout: 10s
-      retries: 100
-  db:
-    build: db 
-    user: postgres
-    ports:
-      - "5432:5432"
+      - "2181:2181"
     environment:
-      - POSTGRES_PASSWORD=e
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=db
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_SERVERS: zookeeper:2888:3888
+  kafka:
+    image: apache/kafka:latest
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+      - "9999:9999"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,DOCKER://host.docker.internal:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_BROKER_ID: 1
+      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_JMX_PORT: 9999
+      KAFKA_JMX_HOSTNAME: ${DOCKER_HOST_IP:-127.0.0.1}
+      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
+      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: "true"
   backend:
     build: backend 
     ports:
@@ -29,9 +37,6 @@ services:
       - PGUSER=postgres
       - POSTGRES_DB=db
       - FRONTEND_URL=$FRONTEND_URL
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
   frontend:
     build: 
       context: frontend
