--- a/compose.yaml
+++ b/compose.yaml
@@ -6,6 +6,8 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - 2181:2181
+    volumes:
+      - zookeeper_data:/var/lib/zookeeper/data
   kafka:
     image: confluentinc/cp-kafka:latest
     depends_on:
@@ -20,6 +22,8 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    volumes:
+      - kafka_data:/var/lib/kafka/data
   backend:
     build: 
       context: backend 
@@ -47,6 +51,8 @@ services:
       - caddy_data:/data
       - caddy_config:/config
 volumes:
+  kafka_data:
+  zookeeper_data:
   caddy_data:
   caddy_config:
   rabbit_lib:
