--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   zookeeper:
-    image: apache/zookeeper:latest
+    image: zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
