--- a/compose_test.yaml
+++ b/compose_test.yaml
@@ -1,13 +1,13 @@
 services:
   zookeeper:
-    image: zookeeper:latest
+    image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - 2181:2181
   kafka:
-    image: apache/kafka:latest
+    image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
     ports:
