--- a/compose.yaml
+++ b/compose.yaml
@@ -6,8 +6,6 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - 2181:2181
-    volumes:
-      - zookeeper_data:/var/lib/zookeeper/data
   kafka:
     image: confluentinc/cp-kafka:latest
     depends_on:
@@ -22,15 +20,12 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    volumes:
-      - kafka_data:/var/lib/kafka/data
   backend:
-    build: 
-      context: backend 
-      args:
-        - FRONTEND_URL=https://cantseewater.online
+    build: backend 
     ports:
       - "8080:8080"
+    environment:
+      - FRONTEND_URL=https://cantseewater.online
   frontend:
     build: 
       context: frontend
@@ -51,9 +46,5 @@ services:
       - caddy_data:/data
       - caddy_config:/config
 volumes:
-  kafka_data:
-  zookeeper_data:
   caddy_data:
   caddy_config:
-  rabbit_lib:
-  rabbit_log:
