--- a/compose.yaml
+++ b/compose.yaml
@@ -25,12 +25,12 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - FRONTEND_URL=https://cantseewater.online
+      - FRONTEND_URL=http://localhost:3000
   frontend:
     build: 
       context: frontend
       args:
-        - BACKEND_URL=https://api.cantseewater.online
+        - BACKEND_URL=http://localhost:8080
     ports:
       - "3000:3000"
     depends_on:
