--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,8 @@
 services:
   postgres:
-    hostname: postgres 
-    ports:
-      - "5432:5432"
-    image: postgres:latest
-    restart: always
+    build:
+      context: .
+      dockerfile: postgres-dockerfile
     user: postgres
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
