--- a/compose.yaml
+++ b/compose.yaml
@@ -62,6 +62,22 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - postgres
+  chat_client:
+    build:
+      context: chat-client
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+  envoy_service:
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    build:
+      context: .
+      dockerfile: Dockerfile-envoy
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./envoy.yaml:/etc/envoy/envoy.yaml
 volumes:
   postgres_data:
   kafka_data:
