--- a/running-in-docker.env
+++ b/running-in-docker.env
@@ -6,3 +6,5 @@ KAFKA_HOSTNAME=broker:9092
 
 CHANNEL_MANAGER_POSTGRES_HOSTNAME=postgres:5432
 CHAT_DB_POSTGRES_HOSTNAME=postgres:5432
+
+REACT_APP_ENVOY_URL=https://proxy.cantseewater.online
