--- a/chat-client/Dockerfile
+++ b/chat-client/Dockerfile
@@ -14,4 +14,8 @@ RUN yarn install
 COPY ./ .
 
 EXPOSE 8081
-CMD ["yarn", "start"]
+
+RUN yarn global add serve
+RUN yarn build
+
+CMD ["serve" "-s" "build" "-l" "8081"]
