--- a/chat-client/Dockerfile
+++ b/chat-client/Dockerfile
@@ -1,21 +1,17 @@
-FROM node:18-alpine3.15 as build
-
-RUN apk add --no-cache protoc
+FROM node:24-alpine
 
 WORKDIR /app
 
-ENV protoc_gen_grpc_web=./node_modules/.bin/protoc-gen-grpc-web
+ENV NODE_ENV production
 
-COPY ./package.json .
-COPY ./yarn.lock .
+COPY package*.json ./
 
-RUN yarn install
+RUN npm install serve && npm ci --production
 
-COPY ./ .
+COPY . .
+
+RUN npm run build
 
 EXPOSE 8081
 
-RUN yarn global add serve
-RUN yarn build
-
-CMD ["serve" "-s" "build" "-l" "8081"]
+CMD ["./node_modules/.bin/serve", "-s", "build", "-l", "8081"]
