--- a/chat-client/public/manifest.json
+++ b/chat-client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Chat",
-  "name": "chat.cantseewater",
+  "name": "chat.wcappa",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
