--- a/running-in-docker.env
+++ b/running-in-docker.env
@@ -1,4 +1,4 @@
-AUTHMASTER_HOSTNAME=auth.cantseewater.online
+AUTHMASTER_HOSTNAME=auth.wcappa.com
 CHAT_WRITER_HOSTNAME=writer:50052
 CHAT_WATCHER_HOSTNAME=watcher:50053
 CHANNEL_MANAGER_HOSTNAME=channels:50055
@@ -7,4 +7,4 @@ KAFKA_HOSTNAME=broker:9092
 CHANNEL_MANAGER_POSTGRES_HOSTNAME=postgres:5432
 CHAT_DB_POSTGRES_HOSTNAME=postgres:5432
 
-REACT_APP_ENVOY_URL=https://proxy.cantseewater.online
+REACT_APP_ENVOY_URL=https://proxy.wcappa.com
